...
                    child: const AppIconView(AppIcon.library),
                  ),
                  label: l10n.navBreakdex,
                ),
                BottomNavigationBarItem(
                  icon: Semantics(
                    identifier: 'add-tab',
                    child: const AppIconView(AppIcon.add),
                  ),
                  label: l10n.navAdd,
                ),
                BottomNavigationBarItem(
                  icon: Semantics(
...
                      child: const AppIconView(AppIcon.insight),
                    ),
                    label: l10n.navStats,
                  ),
                BottomNavigationBarItem(
                  icon: Semantics(
                    identifier: 'settings-tab',
                    child: const AppIconView(AppIcon.settings),
                  ),
                  label: l10n.navSettings,
                ),
              ],
            ),
...
