...
                  textField: true,
                  child: TextField(
                    onChanged: (final v) =>
                        ref.read(_searchQueryProvider.notifier).onChanged(v),
                    decoration: InputDecoration(
                      hintText: segment == ArsenalSegment.moves
                          ? 'Search moves...'
                          : 'Search combos...',
                      prefixIcon: AppIconView(
                        AppIcon.search,
                        color: colorScheme.secondary,
                      ),
                    ),
...
                  },
                ),
        ],
        floatingActionButton:
            Semantics(
                  label: segment == ArsenalSegment.moves
                      ? 'Add new move'
                      : 'Create new combo',
                  button: true,
                  child: FloatingActionButton(
                    onPressed: switch (segment) {
                      ArsenalSegment.moves => () => _startMoveCreationFlow(
                        context,
...
